--- a/form.html
+++ b/form.html
@@ -8,52 +8,54 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <form action="#" class="hobbies">
-      <h2>sở thích của bạn</h2>
-      <div class="form-content">
-        <label for="name">Họ và tên</label>
-        <input type="text" id="name" name="name" />
-        <br />
-        <label for="email">Email</label>
-        <input type="text" id="email" name="email" />
-        <br />
-        <div class="hobby-box">
-          <p>Sở thích</p>
-          <div class="check">
-            <div class="hobby">
-              <input type="checkbox" name="hobby" id="1" />
-              <label for="1">Thể thao</label>
-            </div>
-            <div class="hobby">
-              <input type="checkbox" name="hobby" id="2" />
-              <label for="2">Âm nhạc</label>
-            </div>
-            <div class="hobby">
-              <input type="checkbox" name="hobby" id="3" />
-              <label for="3">Đọc sách</label>
-            </div>
-            <div class="hobby">
-              <input type="checkbox" name="hobby" id="4" />
-              <label for="4">Lướt web</label>
-            </div>
-            <div class="hobby">
-              <input type="checkbox" name="hobby" id="5" />
-              <label for="5">Chơi game</label>
-            </div>
-            <div class="hobby">
-              <input type="checkbox" name="hobby" id="6" />
-              <label for="6">Điện ảnh</label>
-            </div>
-            <div class="hobby">
-              <input type="checkbox" name="hobby" id="7" />
-              <label for="7">Du lịch</label>
+    <div class="form1">
+      <form action="#" class="hobbies">
+        <h2>sở thích của bạn</h2>
+        <div class="form-content">
+          <label for="name">Họ và tên</label>
+          <input type="text" id="name" name="name" />
+          <br />
+          <label for="email">Email</label>
+          <input type="text" id="email" name="email" />
+          <br />
+          <div class="hobby-box">
+            <p>Sở thích</p>
+            <div class="check">
+              <div class="hobby">
+                <input type="checkbox" name="hobby" id="1" />
+                <label for="1">Thể thao</label>
+              </div>
+              <div class="hobby">
+                <input type="checkbox" name="hobby" id="2" />
+                <label for="2">Âm nhạc</label>
+              </div>
+              <div class="hobby">
+                <input type="checkbox" name="hobby" id="3" />
+                <label for="3">Đọc sách</label>
+              </div>
+              <div class="hobby">
+                <input type="checkbox" name="hobby" id="4" />
+                <label for="4">Lướt web</label>
+              </div>
+              <div class="hobby">
+                <input type="checkbox" name="hobby" id="5" />
+                <label for="5">Chơi game</label>
+              </div>
+              <div class="hobby">
+                <input type="checkbox" name="hobby" id="6" />
+                <label for="6">Điện ảnh</label>
+              </div>
+              <div class="hobby">
+                <input type="checkbox" name="hobby" id="7" />
+                <label for="7">Du lịch</label>
+              </div>
             </div>
           </div>
+          <br />
+          <button type="submit">Gửi thông tin</button>
+          <button type="reset">Nhập lại</button>
         </div>
-        <br />
-        <button type="submit">Gửi thông tin</button>
-        <button type="reset">Nhập lại</button>
-      </div>
-    </form>
+      </form>
+    </div>
   </body>
 </html>
